Use ui::AX_EVENT_SELECTION to read aloud omnibox suggestion answers.

The previous approach (ui::AX_EVENT_ALERT) allowed the speaking to be
interrupted by other events.

BUG=714148

Review-Url: https://codereview.chromium.org/2871973002
Cr-Commit-Position: refs/heads/master@{#470404}

Former-commit-id: 97e8179a439eb85276dd8fefa806133b1c965eca